@@ -59,7 +59,7 @@ public class DocumentManagementUploader {
                 uploadResponse
                     .getEmbedded()
                     .getDocuments()
-                    .get(0);
+                    .getFirst();
 
             return new Document(
                 uploadedDocument
